# stoi-cli

./: .gitignore  .~OI-Technical-Design-v1.0.docx  DEMO_SCRIPT.md  README.md  README_zn.md  STOI-Technical-Design-v1.0.docx  STOI-prd.md  claude_feedback_token_validity.py  generate-stoi-doc.js  generate_stoi_doc.py  install.sh  langfuse_sdk_analysis_report.md  meta_prompt.md  pyproject.toml  requirements.txt  run_mcp.sh  stoi.py  stoi_advisor.py  stoi_analyze.py  stoi_config.py  stoi_core.py  stoi_engine.py  stoi_insights.py  stoi_mcp.py  stoi_output_analysis.py  stoi_proxy.py  stoi_repl.py  stoi_report.py  stoi_tavily.py  stoi_tui.py  stoi_ui.py
.claude/: settings.json
.github/workflows/: deploy-pages.yml
STOI-Demo-cola/: requirements.txt  stoi.py  stoi_analyze.py  stoi_engine.py  stoi_metrics.py  stoi_proxy.py  stoi_tui.py
STOI-Demo-cola/tests/: test_stoi_engine.py  test_stoi_metrics.py
site/: cli.html  docs.html  index.html  nav.js  philosophy.html  skill.html  story.html  styles.css
skills/stoi/: SKILL.md
stoi/: __init__.py  __main__.py  stoi.py  stoi_advisor.py  stoi_chain.py  stoi_config.py  stoi_core.py  stoi_dashboard.py  stoi_mcp.py  stoi_output_analysis.py  stoi_proxy.py  stoi_repl.py  stoi_report.py  stoi_tokenizer.py
stoi-skill/: CONFIG.md  ROADMAP.md  SKILL.md  capture_hook.sh  claude_importer.py  claude_skill.yaml  config.py  install.sh  requirements.txt  stoi.py  stoi_gui.py  stoi_rich.py  stoi_tui.py  stoi_web_apple.py  test_stoi.py
stoi-skill/importers/: __init__.py  base.py  claude.py  kimi.py
stoi-skill/ui/: __init__.py  layout.py  theme.py
stoi/stoi_knowledge/: context_engineering.md  (+1 more)
stoi_knowledge/: __init__.py  claude_code_skills.md  context_engineering.md  kv_cache.md  prompt_design.md
(+9 files in other folders)
